# QuartierConnect

./: .env.example  .gitignore  CDC.md  CONTRIBUTING.md  Caddyfile  Caddyfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
api/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  README.md  drizzle.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
desktop-app/: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
docker/: .env.prod.example  Caddyfile  Caddyfile.prod  Dockerfile.admin.prod  Dockerfile.api.prod  Dockerfile.client.prod  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DESIGN.md  DSL.md  GUIDE-SOUTENANCE.md  PLUGINS.md  QuartierConnect_Proposition_Sujet_Groupe1_3AL2.aux  QuartierConnect_Proposition_Sujet_Groupe1_3AL2.out  QuartierConnect_Proposition_Sujet_Groupe1_3AL2.tex  QuartierConnect_Proposition_Sujet_Groupe1_3AL2.toc  RAPPORT-ETAPE2.md  RAPPORT-ETAPE3.md  RAPPORT-TECHNIQUE.md  RENDU-31-05.md  RUNBOOK.md  SECURITY.md  TEST.md  USER_GUIDE.md  livrable-demo-client-web-2026-07.md
dsl/: .coverage  README.md  compiler.py  lexer.py  main.py  parser.py  pyproject.toml  ruff.toml
dsl/src/dsl/: __init__.py
dsl/tests/: test_compiler.py  test_dsl.py  test_lexer.py
ops/: fail2ban-filter-caddy-auth.conf  fail2ban-jail.local  logrotate-caddy  ufw-rules.sh
scripts/: backup-all.sh  (+9 more)
(+770 files in other folders)
