[project]
name = "dsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "creibaud", email = "c.reibaud@myskolae.fr" }]
requires-python = ">=3.12"
dependencies = ["ply>=3.11"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dsl --cov-report=term-missing"
